# tower_crane

./: .gitignore  ALL_LAUNCH_FILES_FIXED.md  CANOPEN_TIMEOUT_FIX.md  CANOPEN_TROUBLESHOOTING.md  COMPLETE_DIAGNOSIS.md  COMPLETE_FIX_SUMMARY.md  CONTROLLER_MANAGER_FIX_CN.md  CONTROLLER_MANAGER_HANG_FIX_COMPLETE.md  CRANE_MASTER_DATAFLOW_GUIDE.md  CRANE_MASTER_TARGET_POSITION_数据流完整技术路线.md  CRANE_MASTER_vs_TOWER_CRANE_三层架构对比.md  CRANE_MASTER_数据流可视化流程图.md  CURRENT_SITUATION.md  DIAGNOSIS_SUMMARY.md  ENABLE_MOTORS_FIX.md  ENCODER_COUNTS_FIX.md  FINAL_FIX_MODE_NOT_SUPPORTED.md  FINAL_FIX_SUMMARY.md  FINAL_SOLUTION_README.md  HANGING_SERVICE_FIX.md  HOW_TO_MOVE_TROLLEY.md  INTERPOLATED_MODE_FIX.md  LAUNCH_ARCHITECTURE.md  LAUNCH_FILES_FIXED.md  LAUNCH_FIX_SUMMARY.md  MODE_NOT_SUPPORTED_COMPLETE_FIX.md  MODE_SWITCH_TIMEOUT_FIX.md  MOTOR_ACTIVATION_FIX.md  MOTOR_ISSUE_SUMMARY.md  MOTOR_NOT_MOVING_FIX.md  MOTOR_NOT_MOVING_REAL_FIX.md  MOTOR_NOT_MOVING_TROUBLESHOOTING.md  MOVEIT_LAUNCH_SIMPLIFIED.md  MOVE_TROLLEY_COMMANDS.md  QUICK_FIX_MODE_NOT_SUPPORTED.md  QUICK_FIX_MOTOR_NOT_MOVING.md  QUICK_FIX_SUMMARY.md  QUICK_HELP.md  QUICK_LAUNCH_GUIDE.md  QUICK_START.md  (+87 more)
.cursor/commands/: controllermanager.md
crane/: hil_trajectory_eval.py
crane/crane_master/: ARCHITECTURE.txt  CMakeLists.txt  DEBUG_JOYSTICK.md  README.md  TARGET_POSITION_快速参考表.md  TARGET_POSITION_数据流技术文档索引.md  package.xml
crane/crane_master/config/: crane_params.yaml
crane/crane_master/include/crane_master/: canopen_ros2_node.hpp  sync_trajectory_action_server.hpp
crane/crane_master/launch/: canopen_ros2.launch.py
crane/crane_master/scripts/: debug_joystick.sh  test_sync_trajectory.sh
crane/crane_master/src/: canopen_can_communication.cpp  canopen_motor_control.cpp  canopen_ros2_interface.cpp  canopen_ros2_node.cpp  canopen_utils.cpp  joystick_bridge.py  main.cpp  moveit_bridge.cpp  sync_trajectory_action_server.cpp
crane/crane_master/test/: test_canopen_utils.cpp
crane/tower_crane/: CMakeLists.txt  README.md  package.xml  urdf.rviz
crane/tower_crane/config/: forward_position_controller.yaml  joint_state_broadcaster.yaml  tower_crane_ros2_control.yaml
crane/tower_crane/config/robot_control/: DSY-C.EDS  bus.yml  master.dcf  patch_master_dcf.py
crane/tower_crane/examples/: custom_controller_example.py  state_plotter.py
crane/tower_crane/launch/: gazebo.launch  hardware_bringup_mock.launch.py  hardware_bringup_real.launch.py  robot_control.launch.py  simulation.launch.py
crane/tower_crane/meshes/: base_link.STL  hook_Link.STL
crane/tower_crane/src/: crane_controller_test.py  joint_state_merger_node.py  spherical_pendulum_dynamics_node.py
crane/tower_crane/urdf/: Tower_crane.csv  Tower_crane.urdf  Tower_crane_base.urdf  Tower_crane_base_v2.urdf  Tower_crane_canopen.urdf.xacro
crane/tower_crane_hardware/: CMakeLists.txt  package.xml  tower_crane_hardware.xml
crane/tower_crane_hardware/include/tower_crane_hardware/: tower_crane_transmission_system.hpp
crane/tower_crane_hardware/src/: tower_crane_transmission_system.cpp
crane/tower_crane_moveit_config/: CMakeLists.txt  README.md  SIMPLE_MOVEIT_SETUP.md  package.xml
crane/tower_crane_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  moveit_v2.rviz  ros2_controllers.yaml  tower_crane.ros2_control copy.xacro  tower_crane.ros2_control.xacro  tower_crane.srdf  tower_crane.urdf.xacro  tower_crane_canopen_ros2_control.xacro  tower_crane_ros2_control.xacro
crane/tower_crane_moveit_config/launch/: bringup.launch.py  demo.launch.py  moveit_only.launch.py  moveit_planning_execution.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  test_rviz_minimal.launch.py  test_rviz_only.launch.py
crane_master/: CMakeLists.txt  README.md  package.xml
crane_master/config/: DSY-C.eds  bus.yml
crane_master/include/crane_master/: canopen_ros2_node.hpp  crane_master_node.hpp
crane_master/include/erob_master/: erob_master_node.hpp
crane_master/launch/: canopen_ros2.launch.py
crane_master/src/: canopen_can_communication.cpp  canopen_motor_control.cpp  canopen_ros2_interface.cpp  canopen_ros2_node.cpp  canopen_utils.cpp  moveit_bridge.cpp  tower_crane_canoepn_ros2.cpp
tower_crane/: CMakeLists.txt  package.xml
tower_crane/config/: joint_names_Tower_crane.yaml  tower_crane_ros2_control.yaml
tower_crane/config/robot_control/: DSY-C.EDS  bus.yml  master.dcf
tower_crane/install/: local_setup.sh  setup.sh
tower_crane/install/tower_crane/share/tower_crane/: package.bash  package.zsh
tower_crane/launch/: display.launch.py  hardware_bringup.launch.py  hardware_bringup_mock.launch.py  hardware_bringup_real.launch.py  robot_control.launch.py
tower_crane/log/: latest_build
tower_crane/meshes/: slewing_Link.STL  trolley_Link.STL
tower_crane/src/: position_tick_motor_node.cpp
tower_crane/urdf/: Tower_crane.urdf
tower_crane_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
tower_crane_moveit_config/config/: initial_positions.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  tower_crane.ros2_control.xacro  tower_crane.urdf.xacro
tower_crane_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_planning_execution.launch.py  moveit_rviz.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
