<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tower_crane</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for canros.
    This package contains configuration data, 3D models and launch files for the canros robot.
  </description>
  <maintainer email="your_email@todo.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build and runtime dependencies for nodes and launch files -->
  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>canopen_core</depend>
  <depend>canopen_interfaces</depend>
  <depend>canopen_base_driver</depend>
  <depend>canopen_proxy_driver</depend>
  <depend>canopen</depend>
  <depend>lely_core_libraries</depend>

  <!-- Runtime tools and visualization -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>canopen_fake_slaves</exec_depend>
  <exec_depend>canopen_ros2_control</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
